--- a/assets/sass/leanback.sass
+++ b/assets/sass/leanback.sass
@@ -1,3 +1,45 @@
 *
 	margin: 0px
 	padding: 0px
+	font-family: 'Open Sans', sans-serif
+
+html, body
+	overflow: hidden
+
+#ytapiplayer
+	z-index: 1
+	position: absolute
+
+#info-overlay
+	position: absolute
+	z-index: 3
+	opacity: .8
+	width: 80%
+	top: 3%
+	left: -80%
+
+#video-title, #video-text
+	color: white
+	background-color: black
+	display: block
+	padding: 2%
+	padding-left: 8%
+
+#video-title
+	text-transform: uppercase
+	font-size: 50px
+	margin-bottom: 2%
+	font-weight: 600
+
+#video-text
+	font-size: 28px
+	width: 85%
+	color: #aaa
+
+#static
+	background-image: url('/assets/images/static.gif')
+	background-size: 100%
+	width: 100%
+	height: 100%
+	z-index: 2
+	display: none
